--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <dt style="color: red;">Firefox</dt>
         <dd style="color: yellowgreen;">It is a open source browser <br>Mozilla Firefox, or simply Firefox, is a free and open-source web browser developed by the Mozilla Foundation and its subsidiary, the Mozilla Corporation. It uses the Gecko rendering engine to display web pages, which implements current and anticipated web standards. In November 2017, Firefox began incorporating new technology under the code name "Quantum" to promote parallelism and a more intuitive user interface. Firefox is available for Windows 7 and later versions, macOS, and Linux. Its unofficial ports are available for various Unix and Unix-like operating systems, including FreeBSD, OpenBSD, NetBSD, illumos, and Solaris Unix. It is also available for Android and iOS. However, as with all other iOS web browsers, the iOS version uses the WebKit layout engine instead of Gecko due to platform requirements. An optimized version is also available on the Amazon Fire TV as one of the two main browsers available with Amazon's Silk Browser. </dd>
 
+        <dt style="background-color: chocolate;">My Introduction</dt>
+        <dd style="color: darkmagenta;"Hello, my name is [name] and I am writing to introduce myself. My interests include photography, art, and music. I enjoy making things out of clay and woodworking. I am a native of the United States and have been here for over 20 years now. I grew up in [city] where I attended school. ></dd>
 
-    </dl>
+</dl>
     
 </body>
 </html>
