--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <title>website my</title>
 </head>
 <body style="background-color: skyblue;">
     <h1> <u> <marquee direction="left"></marquee> Example My Introduction From Defination List</u></h1>
