--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webpage2</title>
+</head>
+<body>
+    <h1>Example SuperScript And SubScript Tag</h1>
+    <p> on the 4 <strong><sup>th </sup> </strong> 
+    of september you will  learn  about E-MC <sup>-2</sup></p>
+    <p> <i> the amount of  Co <sub>2</sub> in the atmosphere grow by in 200 <sub>g</sub></i> </p>
+</body>
+</html>
